Fix dark mode on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -12,6 +12,7 @@
 
 html {
   scroll-behavior: smooth;
+  color-scheme: light;
 }
 
 body {
